feat: melhorias POC Playwright

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "@playwright/test": "^1.41.1"
   },
   "scripts": {
-    "test": "npx playwright test"
+    "test": "npx playwright test",
+    "test:headed": "npx playwright test --headed",
+    "report": "npx playwright show-report"
   }
 }
